# QuickJS.NET

./: .gitignore  CMakeLists.txt  QuickJS.NET.sln
QuickJS.Lite/: IQuickJsModuleLoader.cs  QuickJS.Lite.csproj  QuickJsContext.cs  QuickJsModuleLoader.cs  QuickJsRuntime.cs  QuickJsStd.cs  Utils.cs
QuickJS.Lite/Native/: Delegates.cs  JSContext.cs  JSEvalFlags.cs  JSValue.cs  QuickJSNativeApi.cs
QuickJS.NET/: QuickJS.NET.csproj  QuickJSRuntime.cs
QuickJS.NET/Native/: Delegates.cs  QuickJSNativeApi.cs
QuickJS.NET/runtimes/osx/native/: libquickjs.dylib
ServerlessTest/: Program.cs  ServerlessTest.csproj
ServerlessTest/Pages/: Error.cshtml.cs  Index.cshtml  Index.cshtml.cs  Privacy.cshtml.cs  _ViewImports.cshtml
ServerlessTest/Pages/Shared/: _Layout.cshtml
ServerlessTest/Properties/: launchSettings.json
TestApp/: Program.cs
TestApp2/: JSPromiseState.cs  Program.cs  QuickJsStd.cs  TestApp2.csproj
